[package]
name = "tlsnpy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tlsnpy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tlsn-common = { git = "https://github.com/tlsnotary/tlsn" }
tlsn-core = { git = "https://github.com/tlsnotary/tlsn" }
tlsn-prover = { git = "https://github.com/tlsnotary/tlsn" }
notary-client = { git = "https://github.com/tlsnotary/tlsn" }
notary-server = { git = "https://github.com/tlsnotary/tlsn" }
bincode = "1.3"
anyhow = "1.0"
