[project]
name = "tlsnpy_demo"
version = "0.1.0"
description = "Example demonstrating TLSNotary functionality using tlsnpy"
readme = "../README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "tlsnpy",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "cryptography>=42.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 